--- a/index.html
+++ b/index.html
@@ -204,17 +204,12 @@
                 <h3 class="text-justify"><span class="font-weight-bold">DEPARTAMENTO FINANCEIRO/ FISCAL</span> -
                     Entendemos
                     que a principio o desenvolvimento apriore de colaborador especifico para caminhar no presente
-                    departamento, ou seja, atuar no que tange ao financeiro análise de investimento empresarial,
-                    projetado para auxiliar organizações em suas decisões estratégicas de investimento. Experientes em
-                    finanças e análise de mercado, nosso serviço visa fornecer uma avaliação abrangente e personalizada
-                    das oportunidades de investimento disponíveis. Estamos empenhados em oferecer informações que vão
-                    além dos números, considerando também fatores intangíveis e riscos potenciais. E no fiscal tem como
-                    principal responsabilidade garantir a conformidade com a legislação tributária e fiscal vigente.
-                    Isso envolve a análise e classificação dos documentos fiscais da empresa, como notas fiscais e
-                    recibos. O departamento fiscal também pode ser responsável por representar a empresa
-                    em questões fiscais junto aos órgãos governamentais, como a Receita Federal. É um trabalho que exige
-                    atenção aos detalhes para garantir que a empresa cumpra todas as obrigações legais, evitando sanções
-                    e multas desnecessárias.
+                    departamento, ou seja, atuar no que tange garantir um bom funcionamento do departamento financeiro e
+                    fiscal, oferecemos organizações especializados para capacitar equipes. Abrangem questões técnicas,
+                     como atualizações na legislação e melhores práticas contábeis,
+                    quanto o desenvolvimento de habilidades interpessoais. Além disso, fornecemos suporte
+                    contínuo para responder a dúvidas, auxiliar na resolução de problemas e garantir que a equipe
+                    esteja sempre preparada para lidar com os desafios financeiros e fiscais da empresa.
 
 
 
@@ -222,7 +217,9 @@
                 <h3 class="text-justify"><span class="font-weight-bold">DEPARTAMENTO DE TECNOLOGIA</span> - Com foco em
                     criação de site, gestão de redes sociais e produção de arte para publicações tem o compromisso de
                     fornecer soluções tecnológicas inovadoras e eficientes, ajudando as empresas a se destacarem no
-                    ambiente digital e alcançarem seus objetivos de marketing e vendas.
+                    ambiente digital e alcançarem seus objetivos de marketing e vendas, sendo entregue o projeto ao final da consultoria 
+                    para a empresa que será responsavel por dar continuidade no projeto já realizado, caso haja necessidade da empresa 
+                    um auxilio por mais tempo a consultoria de tecnologia pode se manter por mais tempo de forma a parte.
                 </h3>
                 <h3 class="text-justify"><span class="font-weight-bold">OUTROS ESTUDOS</span> - Comporão a consultoria
                     o estudo de viabilidade para alteração de regime da empresa, o cadastro de mercadoria, bem como a
@@ -254,7 +251,8 @@
                     b. Proposta de análise NCM, da recuperação do crédito prcentual de repasse de 30%. <br>
                     c. Proposta de análise de alteração de regime, investimento de R$ 3.000,00 (três mil reais), porém
                     isento com
-                    o investimento na consultoria.
+                    o investimento na consultoria. <br>
+                    d.Proposta de tecnologia , o investimento será de R$ 5.500,00 (cinco mil e quinhentos reais). 
 
                     <h3></h3>
                     <!--Proposta Contabil//-->
