--- a/index.html
+++ b/index.html
@@ -203,10 +203,10 @@
                 </h3>
                 <h3 class="text-justify"><span class="font-weight-bold">DEPARTAMENTO FINANCEIRO/ FISCAL</span> -
                     Entendemos
-                    que a principio o desenvolvimento apriore de colaborador especifico para caminhar no presente
+                    que a principio o desenvolvimento apriore de colaborador específico para caminhar no presente
                     departamento, ou seja, atuar no que tange garantir um bom funcionamento do departamento financeiro e
                     fiscal, oferecemos organizações especializados para capacitar equipes. Abrangem questões técnicas,
-                     como atualizações na legislação e melhores práticas contábeis,
+                    como atualizações na legislação e melhores práticas contábeis,
                     quanto o desenvolvimento de habilidades interpessoais. Além disso, fornecemos suporte
                     contínuo para responder a dúvidas, auxiliar na resolução de problemas e garantir que a equipe
                     esteja sempre preparada para lidar com os desafios financeiros e fiscais da empresa.
@@ -217,9 +217,10 @@
                 <h3 class="text-justify"><span class="font-weight-bold">DEPARTAMENTO DE TECNOLOGIA</span> - Com foco em
                     criação de site, gestão de redes sociais e produção de arte para publicações tem o compromisso de
                     fornecer soluções tecnológicas inovadoras e eficientes, ajudando as empresas a se destacarem no
-                    ambiente digital e alcançarem seus objetivos de marketing e vendas, sendo entregue o projeto ao final da consultoria 
-                    para a empresa que será responsavel por dar continuidade no projeto já realizado, caso haja necessidade da empresa 
-                    um auxilio por mais tempo a consultoria de tecnologia pode se manter por mais tempo de forma a parte.
+                    ambiente digital e alcançarem seus objetivos de marketing e vendas. Após a consultoria, entregamos o
+                    projeto finalizado à empresa, que será responsável por dar continuidade a ele. Oferecemos também a
+                    opção de auxílio contínuo conforme a necessidade da empresa, por meio de um plano separado da
+                    consultoria.
                 </h3>
                 <h3 class="text-justify"><span class="font-weight-bold">OUTROS ESTUDOS</span> - Comporão a consultoria
                     o estudo de viabilidade para alteração de regime da empresa, o cadastro de mercadoria, bem como a
@@ -252,7 +253,7 @@
                     c. Proposta de análise de alteração de regime, investimento de R$ 3.000,00 (três mil reais), porém
                     isento com
                     o investimento na consultoria. <br>
-                    d.Proposta de tecnologia , o investimento será de R$ 5.500,00 (cinco mil e quinhentos reais). 
+                    d.Proposta de tecnologia , o investimento será de R$ 5.500,00 (cinco mil e quinhentos reais).
 
                     <h3></h3>
                     <!--Proposta Contabil//-->
