--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </div>
                     <div class="card aplic">
                         <div class="img">
-                            <img class="imagem" src="https://i.imgur.com/5rfIKrq.png " width="200px">
+                            <img class="imagem" src="https://i.imgur.com/TQefAZA.png" width="200px">
                         </div>
 
                         <h1 class="mb-0">APLIC</h1>
@@ -249,18 +249,18 @@
                     <br><br>
                     Duração da consultoria: em média de 2 à 4 meses. Nossos consultores especializados atuaram na
                     empresa viabilizando diretamente os conceitos dos departamentos acima elencados. <br>
-                    b. Proposta de análise NCM, da recuperação do crédito prcentual de repasse de 30%. <br>
+                    b. Proposta de análise NCM, da recuperação do crédito percentual de repasse de 30%. <br>
                     c. Proposta de análise de alteração de regime, investimento de R$ 3.000,00 (três mil reais), porém
                     isento com
                     o investimento na consultoria. <br>
-                    d.Proposta de tecnologia , o investimento será de R$ 5.500,00 (cinco mil e quinhentos reais).
+                    d.Proposta de tecnologia, o investimento será de R$ 5.500,00 (cinco mil e quinhentos reais).
 
                     <h3></h3>
                     <!--Proposta Contabil//-->
                     <h3 class="font-weight-bold mt-5 alves"><img src="assets/img/ALVES.png" alt="" width="58px">
                         PROPOSTA DE SERVIÇOS JURÍDICO</h3>
                     <h3 class="text-justify ">a. Com foco em proteção do empresario e sua empresa, para atuação imediata
-                        o valor de investimento para a assessoria será de meio slário mínimo R$660,00 (seiscentos e
+                        o valor de investimento para a assessoria será de meio salário mínimo R$660,00 (seiscentos e
                         sessenta reais).
                     </h3>
 
